ui alignment fixes

--- a/src/components/gadgets/notes-listview/NotesList.css
+++ b/src/components/gadgets/notes-listview/NotesList.css
@@ -1,5 +1,6 @@
 .Notes-list-region {
     width: 100%;
+    overflow: auto;
 }
 
 ul.Notes-list {
