--- a/src/components/gadgets/tasks-listview/TasksList.css
+++ b/src/components/gadgets/tasks-listview/TasksList.css
@@ -1,5 +1,6 @@
 .Task-list-region {
     width: 100%;
+    overflow: auto;
 }
 
 ul.Tasks-list {
